--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,13 +1,13 @@
 @media only screen and (min-width: 300px) and (max-width: 1000px) {
-  body main section#card-2 #right-side .first-image img {
+  body main section#card-2 #right-side .first-image picture img {
     max-width: 90%;
     object-fit: contain;
   }
-  body main section#card-2 #right-side .second-image img {
+  body main section#card-2 #right-side .second-image picture img {
     max-width: 90%;
     object-fit: cover;
   }
-  body main section#card-2 #right-side .last-image img {
+  body main section#card-2 #right-side .last-image picture img {
     max-width: 90%;
     object-fit: cover;
   }
@@ -95,15 +95,8 @@
   body main section#card-2 #right-side .special-bottom p {
     width: 70%;
   }
-  body main section#card-2 #right-side .first-image img {
+  body main section#card-2 #right-side .first-image picture img {
     margin-top: 16px;
-    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-orientation-mobile.jpg");
-  }
-  body main section#card-2 #right-side .second-image img {
-    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-campus-mobile.jpg");
-  }
-  body main section#card-2 #right-side .last-image img {
-    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg");
   }
   body main section#card-3 header h1 {
     margin-top: 32px;
@@ -173,15 +166,15 @@
     margin-top: 32px;
     margin-bottom: 32px;
   }
-  body main section#card-2 article#right-side .first-image img {
+  body main section#card-2 article#right-side .first-image picture {
     max-width: 90%;
     object-fit: contain;
   }
-  body main section#card-2 article#right-side .second-image img {
+  body main section#card-2 article#right-side .second-image picture {
     max-width: 90%;
     object-fit: cover;
   }
-  body main section#card-2 article#right-side .last-image img {
+  body main section#card-2 article#right-side .last-image picture {
     max-width: 90%;
     object-fit: cover;
   }
@@ -331,21 +324,18 @@
     margin-bottom: 8px;
     opacity: 0.5;
   }
-  body main section#card-2 article#right-side .first-image img {
-    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-orientation.jpg");
+  body main section#card-2 article#right-side .first-image picture {
     height: auto;
     width: 35%;
     margin-left: 16px;
   }
-  body main section#card-2 article#right-side .second-image img {
-    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-campus.jpg");
+  body main section#card-2 article#right-side .second-image picture {
     height: auto;
     width: 35%;
     margin-left: 16px;
     margin-top: 16px;
   }
-  body main section#card-2 article#right-side .last-image img {
-    content: url("https://github.com/JensLagrolla/capstone/blob/main/resources/capstone_colmar_assets/images/information-guest-lecture.jpg");
+  body main section#card-2 article#right-side .last-image picture {
     height: auto;
     width: 35%;
     margin-left: 16px;
